Cleaning up test helpers, replacing Arrays with List.of